Reworked Warcry display.

--- a/index.html
+++ b/index.html
@@ -73,32 +73,38 @@
             <div id="force-units"></div>
       </div>
 
-      <!-- AoS Warcry Unit Display prototype -->
+      <!-- AoS Warcry unit display prototype -->
       <div class="container-fluid border" style="display:none;">
             <div class="row align-items-center">
-                  <div class="col">
-                        <p class="warcry_font" style="font-size: 2.2em;">Gaunt Summoner on Disc</p>
+                  <div class="col-1">
+                        <img class="border border-dark rounded-circle warcry_card" src="./assets/warcry/runemarks/black/factions-chaos-tzeentch-arcanites.svg" alt="">
+                  </div> 
+                  <div class="col">                    
+                        <span class="warcry_font" style="font-size: 2.2em;">Gaunt Summoner on Disc</span>      
                   </div>
-                  <div class="col">
-                        <div class="row align-items-center">
-                              <div class="col">
-                                    <img class="border border-dark rounded-circle warcry_card" src="./assets/warcry/runemarks/black/factions-chaos-tzeentch-arcanites.svg" alt="">
-                              </div>
-                              <div class="col">
-                                    <span class="border border-dark rounded-circle warcry_font">260</span>
-                              </div>
+                  <div class="col-4">
+                        <img class="border border-dark rounded-circle warcry_card" src="./assets/warcry/runemarks/black/fighters-agile.svg" alt="">
+                        <img class="border border-dark rounded-circle warcry_card" src="./assets/warcry/runemarks/black/fighters-champion.svg" alt="">
+                        <img class="border border-dark rounded-circle warcry_card" src="./assets/warcry/runemarks/black/fighters-mount.svg" alt="">      
+                  </div>
+                  <div class="col-1">
+                        <div class="border border-dark rounded-circle" style="width: 72px; height: 72px">
+                              <p class="warcry_font text-center">260</p>      
                         </div>
                   </div>
             </div>
             <div class="row align-items-center">
                   <div class="col">
-                        <div class="row align-items-center">
-                              <div class="col">
-                                    <img class="border border-dark rounded warcry_card" src="./assets/warcry/runemarks/black/weapons-blast.svg" alt="">
+                        <p class="card-title warcry_font">Tzeentch Arcane Bolt</p>
+                        <div class="row">
+                               <div class="col">
+                                    <div class="card warcry_card">
+                                          <img src="./assets/warcry/runemarks/black/weapons-blast.svg" alt="">
+                                    </div>                                          
                               </div>
                               <div class="col">
                                     <div class="card warcry_card">
-                                          <img class="carg-img-top warcry_card_img" src="./assets/warcry/runemarks/black/characteristics-range.svg" alt="">
+                                          <img class="card-img-top warcry_card_img" src="./assets/warcry/runemarks/black/characteristics-range.svg" alt="">
                                           <div class="card-body warcry_card_label">
                                                 <p class="card-title warcry_font">3-7</p>
                                           </div>
@@ -106,7 +112,7 @@
                               </div>
                               <div class="col">
                                     <div class="card warcry_card">
-                                          <img class="carg-img-top warcry_card_img" src="./assets/warcry/runemarks/black/characteristics-attacks.svg" alt="">
+                                          <img class="card-img-top warcry_card_img" src="./assets/warcry/runemarks/black/characteristics-attacks.svg" alt="">
                                           <div class="card-body warcry_card_label">
                                                 <p class="card-title warcry_font">2</p>
                                           </div>
@@ -114,7 +120,7 @@
                               </div>
                               <div class="col">
                                     <div class="card warcry_card">
-                                          <img class="carg-img-top warcry_card_img" src="./assets/warcry/runemarks/black/characteristics-strength.svg" alt="">
+                                          <img class="card-img-top warcry_card_img" src="./assets/warcry/runemarks/black/characteristics-strength.svg" alt="">
                                           <div class="card-body warcry_card_label">
                                                 <p class="card-title warcry_font">3</p>
                                           </div>
@@ -122,7 +128,7 @@
                               </div>
                               <div class="col">
                                     <div class="card warcry_card">
-                                          <img class="carg-img-top warcry_card_img" src="./assets/warcry/runemarks/black/characteristics-damage.svg" alt="">
+                                          <img class="card-img-top warcry_card_img" src="./assets/warcry/runemarks/black/characteristics-damage.svg" alt="">
                                           <div class="card-body warcry_card_label">
                                                 <p class="card-title warcry_font">3/6</p>
                                           </div>
@@ -131,24 +137,17 @@
                         </div>
                   </div>
                   <div class="col">
-                        <div class="row align-items-center">
-                              <div class="col">
-                                    <img class="border border-dark rounded-circle warcry_card" src="./assets/warcry/runemarks/black/fighters-agile.svg" alt="">
-                              </div>
-                              <div class="col">
-                                    <img class="border border-dark rounded-circle warcry_card" src="./assets/warcry/runemarks/black/fighters-champion.svg" alt="">
-                              </div>
-                              <div class="col">
-                                    <img class="border border-dark rounded-circle warcry_card" src="./assets/warcry/runemarks/black/fighters-mount.svg" alt="">      
-                              </div>
-                        </div>
+                        <!-- Empty -->
                   </div>
             </div>
             <div class="row align-items-center">
                   <div class="col">
-                        <div class="row align-items-center">
+                        <p class="card-title warcry_font">Teeth and Horns</p>
+                        <div class="row">
                               <div class="col">
-                                    <img class="border border-dark rounded warcry_card" src="./assets/warcry/runemarks/black/weapons-fangs.svg" alt="">
+                                    <div class="card warcry_card">
+                                          <img src="./assets/warcry/runemarks/black/weapons-fangs.svg" alt="">
+                                    </div>
                               </div>
                               <div class="col">
                                     <div class="card warcry_card">
@@ -185,37 +184,43 @@
                          </div>
                   </div>
                   <div class="col">
-                        <div class="row align-items-center">
+                        <div class="row">
+                              <div class="col">
+                                    <!-- Empty -->
+                              </div>
                               <div class="col">
                                     <div class="card warcry_card">
-                                          <img class="carg-img-top warcry_card_img" src="./assets/warcry/runemarks/black/characteristics-move.svg" alt="">
+                                          <img class="card-img-top warcry_card_img" src="./assets/warcry/runemarks/black/characteristics-move.svg" alt="">
                                           <div class="card-body  warcry_card_label">
                                                 <p class="card-title warcry_font">10</p>
                                           </div>
-                                    </div>      
+                                    </div> 
                               </div>
                               <div class="col">
                                     <div class="card warcry_card">
-                                          <img class="carg-img-top warcry_card_img" src="./assets/warcry/runemarks/black/characteristics-toughness.svg" alt="">
+                                          <img class="card-img-top warcry_card_img" src="./assets/warcry/runemarks/black/characteristics-toughness.svg" alt="">
                                           <div class="card-body warcry_card_label">
                                                 <p class="card-text warcry_font">4</p>
                                           </div>
-                                    </div>      
-                              </div>
+                                    </div> 
+                              </div>                                         
                               <div class="col">
                                     <div class="card warcry_card">
-                                          <img class="carg-img-top warcry_card_img" src="./assets/warcry/runemarks/black/characteristics-wounds.svg" alt="">
+                                          <img class="card-img-top warcry_card_img" src="./assets/warcry/runemarks/black/characteristics-wounds.svg" alt="">
                                           <div class="card-body warcry_card_label">
                                                 <p class="card-title warcry_font">30</p>
                                           </div>
                                     </div>      
+                              </div>
+                              <div class="col">
+                                    <!-- Empty -->
                               </div>                             
                         </div>
                   </div>
             </div>
       </div>
 
-      <!-- AoS Unit Display prototype -->
+      <!-- AoS unit display prototype -->
       <div class="container-fluid" style="display:none;">
             <div class="row">
                   <div class="col-3">
@@ -378,6 +383,95 @@
                         </div>
                   </div>
             </div>
+      </div>
+
+      <!-- 40k unit display prototype -->
+      <div class="container-fluid"  style="display:none;">
+            <div class="row">
+                  <div>
+                        Beast Snagga Boyz
+                  </div>
+                  <div>
+                        <p>Power Level: 5  Points: 225</p>
+                  </div>
+            </div>
+            <hr>
+            <table class="table table-striped tabel-sm">
+                  <thead>
+                        <tr>
+                              <th>Model</th>
+                              <th>M</th>
+                              <th>WS</th>
+                              <th>BS</th>
+                              <th>S</th>
+                              <th>T</th>
+                              <th>W</th>
+                              <th>A</th>
+                              <th>LD</th>
+                              <th>SAVE</th>
+                        </tr>
+                  </thead>
+                  <tbody>
+                        <tr>
+                              <td>Beast Snagga Boy</td>
+                              <td>5"</td>
+                              <td>3+</td>
+                              <td>5+</td>
+                              <td>5</td>
+                              <td>5</td>
+                              <td>1</td>
+                              <td>2</td>
+                              <td>6</td>
+                              <td>6+</td>
+                        </tr>
+                  </tbody>
+            </table>
+
+            <table class="table table-striped tabel-sm">
+                  <thead>
+                        <tr>
+                              <th>Weapons</th>
+                              <th>Range</th>
+                              <th>Type</th>
+                              <th>S</th>
+                              <th>AP</th>
+                              <th>D</th>
+                              <th>Abilities</th>
+                        </tr>
+                  </thead>
+                  <tbody>
+                        <tr>
+                              <td>Slugga</td>
+                              <td>12"</td>
+                              <td>Pistol 1</td>
+                              <td>4</td>
+                              <td>0</td>
+                              <td>1</td>
+                              <td>-</td>
+                        </tr>
+                        <tr>
+                              <td>Choppa</td>
+                              <td>Melee</td>
+                              <td>Melee</td>
+                              <td>User</td>
+                              <td>-1</td>
+                              <td>1</td>
+                              <td>Each time the bearer fights, it can make 1 additional attack with this weapon.</td>
+                        </tr>
+                  </tbody>
+            </table>
+            <hr>
+            <h3>Abilities</h3>
+            <p>Beast Snagga</p>
+            <p>'Ere We Go</p>
+            <hr>
+            <h3>Factions</h3>
+            <p>Orks, Geoff</p>
+            <h3>Keywords</h3>
+            <p>Infantry, Mob, Core, Beast Snagga, Beast Snagga Boyz</p>
+            <h3>Models</h3>
+            <p>Beast Snagga Nob</p>
+            <p>Beast Snagga Boyz (9x)</p>
       </div>
 
       <!-- Error dialog -->
