Center Warcry points.

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                         <img class="border border-dark rounded-circle warcry_card" src="./assets/warcry/runemarks/black/fighters-mount.svg" alt="">      
                   </div>
                   <div class="col-1">
-                        <div class="border border-dark rounded-circle" style="width: 72px; height: 72px">
-                              <p class="warcry_font text-center">260</p>      
+                        <div class="border border-dark text-center rounded-circle warcry_font" style="width: 72px; height: 72px; line-height: 72px;">
+                              260
                         </div>
                   </div>
             </div>
