--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>PrettyScribe</title>
 
+      <link rel="shortcut icon" href="./assets/favicon.ico" sizes="32x32">
+
       <link href="https://fonts.googleapis.com/css?family=Fjalla+One|PT+Serif|Source+Sans+Pro&display=swap"
             rel="stylesheet">
       <link rel="preconnect" href="https://fonts.googleapis.com">
