Fix Navbar. Hide Navbar when printing.

--- a/about.html
+++ b/about.html
@@ -17,14 +17,14 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-light bg-light justify-content-between">
         <div class="container">
-            <a href="index.html"><span class="navbar-brand">PrettyScribe</span></a>
+            <a class="navbar-brand" href="index.html">PrettyScribe</a>
             <div>A pretty-printer for BattleScribe rosters.</div>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbarAbout"
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbarAbout"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="collapsibleNavbarAbout">
-                <ul class="navbar-nav ml-auto">
+                <ul class="navbar-nav me-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="help.html">Help</a>
                     </li>
