--- a/help.html
+++ b/help.html
@@ -17,14 +17,14 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-light bg-light justify-content-between">
         <div class="container">
-            <a href="index.html"><span class="navbar-brand">PrettyScribe</span></a>
+            <a class="navbar-brand" href="index.html">PrettyScribe</a>
             <div>A pretty-printer for BattleScribe rosters.</div>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbarHelp"
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbarHelp"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="collapsibleNavbarHelp">
-                <ul class="navbar-nav ml-auto">
+                <ul class="navbar-nav me-auto">
                     <li class="nav-item active">
                         <a class="nav-link" href="help.html">Help</a>
                     </li>
@@ -60,7 +60,7 @@
                 converts them to an easier to read layout suitable for printing or viewing on your device.
                 PrettyScribe supports the rosters for these game systems:
                 <ul>
-                    <li>Warhammer 40k (8th Edition)</li>
+                    <li>Warhammer 40k (8th/9th Editions)</li>
                     <li>Warhammer 40k Kill Team</li>
                     <li>Horus Heresy - Warhammer 30k</li>
                     <li>Warhammer Age of Sigmar</li>
