--- a/index.html
+++ b/index.html
@@ -37,37 +37,39 @@
             <img id="aos_stats" src="./assets/aos_stats_min.svg">
       </div>
 
-      <nav class="navbar navbar-expand-md navbar-light bg-light justify-content-between">
-            <div class="container">
-                <a href="index.html"><span class="navbar-brand">PrettyScribe</span></a>
-                <div>A pretty-printer for BattleScribe rosters.</div>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbarAbout"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="collapsibleNavbarAbout">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="help.html">Help</a>
-                        </li>
-                        <li class="nav-item active">
-                            <a class="nav-link active" href="about.html">About</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-      </nav>
+      <div class="d-print-none">
+            <nav class="navbar navbar-expand-md navbar-light bg-light">
+                  <div class="container">
+                        <a class="navbar-brand" href="index.html">PrettyScribe</a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbarAbout"
+                              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                              <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="collapsibleNavbarAbout">
+                              <ul class="navbar-nav me-auto">
+                                    <li class="nav-item">
+                                    <a class="nav-link" href="help.html">Help</a>
+                                    </li>
+                                    <li class="nav-item active">
+                                    <a class="nav-link active" href="about.html">About</a>
+                                    </li>
+                              </ul>
+                        </div>
+                        <div>A pretty-printer for BattleScribe rosters.</div>
+                  </div>
+            </nav>
 
-      <div class="container">
-            <div class="input-group mb-3">
-                  <input type="file" class="form-control" files="roster-file" id="roster-file" name="roster-file">
-                  <label class="input-group-text" for="roster-file">Select roster file (.ros, .rosz)</label>
-            </div>      
+            <div class="container">
+                  <div class="input-group input-file mb-3">
+                        <input type="file" class="form-control" files="roster-file" id="roster-file" name="roster-file">
+                        <label class="input-group-text" for="roster-file">Select roster file (.ros, .rosz)</label>
+                  </div>      
+            </div>
+
+            <hr class="border-top border-primary">
       </div>
 
-      <hr class="border-top border-primary">
-
-      <div>
+      <div class="container-fluid">
             <div id="roster-title"></div>
 
             <div id="roster-lists"></div>
