--- a/help.html
+++ b/help.html
@@ -39,7 +39,7 @@
     <div class="row">
         <div class="col-md-12">
             <h4>Usage</h4>
-            <p>Use the Browse button on the main PrettyScribe page to select a roster file for formatting. That's it.
+            <p>Use the 'Choose File' button on the main PrettyScribe page to select a roster file for formatting. That's it.
                 Print the resulting pages however you'd like.
             </p>
             <h4>Detailed Instructions</h4>
