Add Warcry damage table display.

--- a/index.html
+++ b/index.html
@@ -222,6 +222,47 @@
                         </div>
                   </div>
             </div>
+
+            <div class="row container">
+                  <div class="p-2 mb-2 text-center text-uppercase text-black"><span class="warcry_font">Damage Table</span></div>
+                        <table class="table table-bordered table-sm text-center">
+                              <thead>
+                              <tr>
+                                    <th>Damage Points Allocated</th>
+                                    <th>Move</th>
+                                    <th>Damage</th>
+                              </tr>
+                              </thead>
+                              <tbody>
+                              <tr>
+                                    <td>0-10</td>
+                                    <td>6"</td>
+                                    <td>4/8</td>
+                              </tr>
+                              <tr>
+                                    <td>11-20</td>
+                                    <td>5"</td>
+                                    <td>4/6</td>
+                              </tr>
+                              <tr>
+                                    <td>21-30</td>
+                                    <td>4"</td>
+                                    <td>3/6</td>
+                              </tr>
+                              <tr>
+                                    <td>31-40</td>
+                                    <td>3"</td>
+                                    <td>3/4</td>
+                              </tr>
+                              <tr>
+                                    <td>41-49</td>
+                                    <td>2"</td>
+                                    <td>2/4</td>
+                              </tr>
+                              </tbody>
+                        </table>
+                  </div>
+            </div>                  
       </div>
 
       <!-- AoS unit display prototype -->
