--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro&display=swap" rel="stylesheet">
 
       <!-- Bootstrap CSS -->
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
       <link rel="stylesheet" href="./css/prettyscribe.css">
-      
+
       <script src="https://kit.fontawesome.com/324895d590.js" crossorigin="anonymous"></script>
 </head>
 
@@ -41,17 +41,18 @@
             <nav class="navbar navbar-expand-md navbar-light bg-light">
                   <div class="container">
                         <a class="navbar-brand" href="index.html">PrettyScribe</a>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbarAbout"
-                              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                              data-bs-target="#collapsibleNavbarAbout" aria-controls="navbarNav" aria-expanded="false"
+                              aria-label="Toggle navigation">
                               <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="collapsibleNavbarAbout">
                               <ul class="navbar-nav me-auto">
                                     <li class="nav-item">
-                                    <a class="nav-link" href="help.html">Help</a>
+                                          <a class="nav-link" href="help.html">Help</a>
                                     </li>
                                     <li class="nav-item active">
-                                    <a class="nav-link active" href="about.html">About</a>
+                                          <a class="nav-link active" href="about.html">About</a>
                                     </li>
                               </ul>
                         </div>
@@ -63,7 +64,7 @@
                   <div class="input-group input-file mb-3">
                         <input type="file" class="form-control" files="roster-file" id="roster-file" name="roster-file">
                         <label class="input-group-text" for="roster-file">Select roster file (.ros, .rosz)</label>
-                  </div>      
+                  </div>
             </div>
 
             <hr class="border-top border-primary">
@@ -81,18 +82,23 @@
       <div class="container-fluid border" style="display:none;">
             <div class="row align-items-center">
                   <div class="col-1">
-                        <img class="border border-dark rounded-circle warcry_card" src="./assets/warcry/runemarks/black/factions-chaos-tzeentch-arcanites.svg" alt="">
-                  </div> 
-                  <div class="col">                    
-                        <span class="warcry_font" style="font-size: 2.2em;">Gaunt Summoner on Disc</span>      
+                        <img class="border border-dark rounded-circle warcry_card"
+                              src="./assets/warcry/runemarks/black/factions-chaos-tzeentch-arcanites.svg" alt="">
+                  </div>
+                  <div class="col">
+                        <span class="warcry_font" style="font-size: 2.2em;">Gaunt Summoner on Disc</span>
                   </div>
                   <div class="col-4">
-                        <img class="border border-dark rounded-circle warcry_card" src="./assets/warcry/runemarks/black/fighters-agile.svg" alt="">
-                        <img class="border border-dark rounded-circle warcry_card" src="./assets/warcry/runemarks/black/fighters-champion.svg" alt="">
-                        <img class="border border-dark rounded-circle warcry_card" src="./assets/warcry/runemarks/black/fighters-mount.svg" alt="">      
+                        <img class="border border-dark rounded-circle warcry_card"
+                              src="./assets/warcry/runemarks/black/fighters-agile.svg" alt="">
+                        <img class="border border-dark rounded-circle warcry_card"
+                              src="./assets/warcry/runemarks/black/fighters-champion.svg" alt="">
+                        <img class="border border-dark rounded-circle warcry_card"
+                              src="./assets/warcry/runemarks/black/fighters-mount.svg" alt="">
                   </div>
                   <div class="col-1">
-                        <div class="border border-dark text-center rounded-circle warcry_font" style="width: 72px; height: 72px; line-height: 72px;">
+                        <div class="border border-dark text-center rounded-circle warcry_font"
+                              style="width: 72px; height: 72px; line-height: 72px;">
                               260
                         </div>
                   </div>
@@ -101,42 +107,48 @@
                   <div class="col">
                         <p class="card-title warcry_font">Tzeentch Arcane Bolt</p>
                         <div class="row">
-                               <div class="col">
+                              <div class="col">
                                     <div class="card warcry_card">
                                           <img src="./assets/warcry/runemarks/black/weapons-blast.svg" alt="">
-                                    </div>                                          
+                                    </div>
                               </div>
                               <div class="col">
                                     <div class="card warcry_card">
-                                          <img class="card-img-top warcry_card_img" src="./assets/warcry/runemarks/black/characteristics-range.svg" alt="">
+                                          <img class="card-img-top warcry_card_img"
+                                                src="./assets/warcry/runemarks/black/characteristics-range.svg" alt="">
                                           <div class="card-body warcry_card_label">
                                                 <p class="card-title warcry_font">3-7</p>
                                           </div>
-                                    </div>      
+                                    </div>
                               </div>
                               <div class="col">
                                     <div class="card warcry_card">
-                                          <img class="card-img-top warcry_card_img" src="./assets/warcry/runemarks/black/characteristics-attacks.svg" alt="">
+                                          <img class="card-img-top warcry_card_img"
+                                                src="./assets/warcry/runemarks/black/characteristics-attacks.svg"
+                                                alt="">
                                           <div class="card-body warcry_card_label">
                                                 <p class="card-title warcry_font">2</p>
                                           </div>
-                                    </div>      
+                                    </div>
                               </div>
                               <div class="col">
                                     <div class="card warcry_card">
-                                          <img class="card-img-top warcry_card_img" src="./assets/warcry/runemarks/black/characteristics-strength.svg" alt="">
+                                          <img class="card-img-top warcry_card_img"
+                                                src="./assets/warcry/runemarks/black/characteristics-strength.svg"
+                                                alt="">
                                           <div class="card-body warcry_card_label">
                                                 <p class="card-title warcry_font">3</p>
                                           </div>
-                                    </div>      
+                                    </div>
                               </div>
                               <div class="col">
                                     <div class="card warcry_card">
-                                          <img class="card-img-top warcry_card_img" src="./assets/warcry/runemarks/black/characteristics-damage.svg" alt="">
+                                          <img class="card-img-top warcry_card_img"
+                                                src="./assets/warcry/runemarks/black/characteristics-damage.svg" alt="">
                                           <div class="card-body warcry_card_label">
                                                 <p class="card-title warcry_font">3/6</p>
                                           </div>
-                                    </div>      
+                                    </div>
                               </div>
                         </div>
                   </div>
@@ -155,37 +167,43 @@
                               </div>
                               <div class="col">
                                     <div class="card warcry_card">
-                                          <img class="carg-img-top warcry_card_img" src="./assets/warcry/runemarks/black/characteristics-range.svg" alt="">
+                                          <img class="carg-img-top warcry_card_img"
+                                                src="./assets/warcry/runemarks/black/characteristics-range.svg" alt="">
                                           <div class="card-body warcry_card_label">
                                                 <p class="card-title warcry_font">1</p>
                                           </div>
-                                    </div>      
+                                    </div>
                               </div>
                               <div class="col">
                                     <div class="card warcry_card">
-                                          <img class="carg-img-top warcry_card_img" src="./assets/warcry/runemarks/black/characteristics-attacks.svg" alt="">
+                                          <img class="carg-img-top warcry_card_img"
+                                                src="./assets/warcry/runemarks/black/characteristics-attacks.svg"
+                                                alt="">
                                           <div class="card-body warcry_card_label">
                                                 <p class="card-title warcry_font">4</p>
                                           </div>
-                                    </div>      
+                                    </div>
                               </div>
                               <div class="col">
                                     <div class="card warcry_card">
-                                          <img class="carg-img-top warcry_card_img" src="./assets/warcry/runemarks/black/characteristics-strength.svg" alt="">
+                                          <img class="carg-img-top warcry_card_img"
+                                                src="./assets/warcry/runemarks/black/characteristics-strength.svg"
+                                                alt="">
                                           <div class="card-body warcry_card_label">
                                                 <p class="card-title warcry_font">4</p>
                                           </div>
-                                    </div>      
+                                    </div>
                               </div>
                               <div class="col">
                                     <div class="card warcry_card">
-                                          <img class="carg-img-top warcry_card_img" src="./assets/warcry/runemarks/black/characteristics-damage.svg" alt="">
+                                          <img class="carg-img-top warcry_card_img"
+                                                src="./assets/warcry/runemarks/black/characteristics-damage.svg" alt="">
                                           <div class="card-body warcry_card_label">
                                                 <p class="card-title warcry_font">2/4</p>
                                           </div>
-                                    </div>      
+                                    </div>
                               </div>
-                         </div>
+                        </div>
                   </div>
                   <div class="col">
                         <div class="row">
@@ -194,46 +212,51 @@
                               </div>
                               <div class="col">
                                     <div class="card warcry_card">
-                                          <img class="card-img-top warcry_card_img" src="./assets/warcry/runemarks/black/characteristics-move.svg" alt="">
+                                          <img class="card-img-top warcry_card_img"
+                                                src="./assets/warcry/runemarks/black/characteristics-move.svg" alt="">
                                           <div class="card-body  warcry_card_label">
                                                 <p class="card-title warcry_font">10</p>
                                           </div>
-                                    </div> 
+                                    </div>
                               </div>
                               <div class="col">
                                     <div class="card warcry_card">
-                                          <img class="card-img-top warcry_card_img" src="./assets/warcry/runemarks/black/characteristics-toughness.svg" alt="">
+                                          <img class="card-img-top warcry_card_img"
+                                                src="./assets/warcry/runemarks/black/characteristics-toughness.svg"
+                                                alt="">
                                           <div class="card-body warcry_card_label">
                                                 <p class="card-text warcry_font">4</p>
                                           </div>
-                                    </div> 
-                              </div>                                         
+                                    </div>
+                              </div>
                               <div class="col">
                                     <div class="card warcry_card">
-                                          <img class="card-img-top warcry_card_img" src="./assets/warcry/runemarks/black/characteristics-wounds.svg" alt="">
+                                          <img class="card-img-top warcry_card_img"
+                                                src="./assets/warcry/runemarks/black/characteristics-wounds.svg" alt="">
                                           <div class="card-body warcry_card_label">
                                                 <p class="card-title warcry_font">30</p>
                                           </div>
-                                    </div>      
+                                    </div>
                               </div>
                               <div class="col">
                                     <!-- Empty -->
-                              </div>                             
+                              </div>
                         </div>
                   </div>
             </div>
 
             <div class="row container">
-                  <div class="p-2 mb-2 text-center text-uppercase text-black"><span class="warcry_font">Damage Table</span></div>
-                        <table class="table table-bordered table-sm text-center">
-                              <thead>
+                  <div class="p-2 mb-2 text-center text-uppercase text-black"><span class="warcry_font">Damage
+                              Table</span></div>
+                  <table class="table table-bordered table-sm text-center">
+                        <thead>
                               <tr>
                                     <th>Damage Points Allocated</th>
                                     <th>Move</th>
                                     <th>Damage</th>
                               </tr>
-                              </thead>
-                              <tbody>
+                        </thead>
+                        <tbody>
                               <tr>
                                     <td>0-10</td>
                                     <td>6"</td>
@@ -259,10 +282,9 @@
                                     <td>2"</td>
                                     <td>2/4</td>
                               </tr>
-                              </tbody>
-                        </table>
-                  </div>
-            </div>                  
+                        </tbody>
+                  </table>
+            </div>
       </div>
 
       <!-- AoS unit display prototype -->
@@ -431,13 +453,13 @@
       </div>
 
       <!-- 40k unit display prototype -->
-      <div class="container-fluid"  style="display:none;">
+      <div class="container-fluid" style="display:none;">
             <div class="row">
                   <div>
                         Beast Snagga Boyz
                   </div>
                   <div>
-                        <p>Power Level: 5  Points: 225</p>
+                        <p>Power Level: 5 Points: 225</p>
                   </div>
             </div>
             <hr>
@@ -539,8 +561,9 @@
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
             crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
 
       <script type="module" src="./dist/prettyscribe.js"></script>
 
